--- a/nodes/clashmeta.yaml
+++ b/nodes/clashmeta.yaml
@@ -4,14 +4,132 @@ log-level: info
 mode: Rule
 port: 7890
 proxies:
-- name: US美国(mibei77.com 米贝节点分享)
-  password: ad9c84af-e5aa-43e2-88df-7cfd99d4d0a0
+- cipher: chacha20-ietf-poly1305
+  name: US美国(mibei77.com 米贝节点分享)
+  password: p78naCf2EfOlRSLTX0wFVx
   port: 443
-  server: bestcdn1.682637.xyz
-  skip-cert-verify: true
-  sni: bestcdn1.682637.xyz
-  type: trojan
+  server: pupas-shirting-unsung.freesocks.work
+  type: ss
   udp: true
+- cipher: aes-128-gcm
+  name: HK香港(mibei77.com 米贝节点分享)
+  password: a6ccbd9b-ccba-443f-b10b-d7595d178d73
+  port: 38305
+  server: dfes.bcymanuscript.top
+  type: ss
+  udp: true
+- alterId: 0
+  cipher: auto
+  name: US美国(mibei77.com 米贝节点分享) 2
+  network: ws
+  port: 443
+  server: a-v1.888988866.xyz
+  skip-cert-verify: true
+  tls: true
+  type: vmess
+  udp: true
+  uuid: 104556c9-797c-42e9-9bb7-7a6e9974b857
+  ws-headers:
+    Host: a-v1.888988866.xyz
+  ws-path: /104556c9-797c-42e9-9bb7-7a6e9974b857
+- cipher: aes-256-gcm
+  name: HK香港(mibei77.com 米贝节点分享) 2
+  password: 4752fc27-8959-4082-9cf4-ccc84096f31e
+  port: 37086
+  server: entrance03.qqa678.cc
+  type: ss
+  udp: true
+- cipher: aes-128-gcm
+  name: HK香港(mibei77.com 米贝节点分享) 3
+  password: 0fb24eb6-2f5b-4022-8f2a-732d1ed0c76a
+  port: 38321
+  server: dfes.bcymanuscript.top
+  type: ss
+  udp: true
+- cipher: aes-128-gcm
+  name: HK香港(mibei77.com 米贝节点分享) 4
+  password: ba7bb62d-e5e2-42f6-ab7e-57baf5e95a4b
+  port: 38318
+  server: dfes.bcymanuscript.top
+  type: ss
+  udp: true
+- alterId: 0
+  cipher: auto
+  name: US美国(mibei77.com 米贝节点分享) 3
+  network: ws
+  port: 443
+  server: y-v1.888988866.xyz
+  skip-cert-verify: true
+  tls: true
+  type: vmess
+  udp: true
+  uuid: a397bd18-5a5f-4a5a-bf03-ed5bc1a990eb
+  ws-headers:
+    Host: y-v1.888988866.xyz
+  ws-path: /a397bd18-5a5f-4a5a-bf03-ed5bc1a990eb
+- cipher: aes-256-gcm
+  name: HK香港(mibei77.com 米贝节点分享) 5
+  password: e9b0fa0b-72fb-4993-a251-9f518512fec8
+  port: 47081
+  server: entrance04.qqa678.cc
+  type: ss
+  udp: true
+- cipher: aes-256-gcm
+  name: HK香港(mibei77.com 米贝节点分享) 6
+  password: 8e94ed0e-3717-4c46-aa13-6757a89b392e
+  port: 47081
+  server: entrance02.qqa678.cc
+  type: ss
+  udp: true
+- cipher: aes-256-gcm
+  name: HK香港(mibei77.com 米贝节点分享) 7
+  password: 8e94ed0e-3717-4c46-aa13-6757a89b392e
+  port: 47081
+  server: entrance03.qqa678.cc
+  type: ss
+  udp: true
+- cipher: aes-128-gcm
+  name: HK香港(mibei77.com 米贝节点分享) 8
+  password: ddc49688-dfcd-4d03-a6b0-ec52aceba63a
+  port: 38318
+  server: dfes.bcymanuscript.top
+  type: ss
+  udp: true
+- cipher: chacha20-ietf-poly1305
+  name: US美国(mibei77.com 米贝节点分享) 4
+  password: RFK38Cg7APneSB5cWDcpbm
+  port: 443
+  server: switcher-nick-croquet.freesocks.work
+  type: ss
+  udp: true
+- cipher: chacha20-ietf-poly1305
+  name: JP日本(mibei77.com 米贝节点分享)
+  password: Nk9asglDzHzjktVzTkvhaA
+  port: 443
+  server: arxfw2b78fi2q9hzylhn.freesocks.work
+  type: ss
+  udp: true
+- cipher: chacha20-ietf-poly1305
+  name: US美国(mibei77.com 米贝节点分享) 5
+  password: 9tqhMdIrTkgQ46PvhyAtMH
+  port: 443
+  server: switcher-nick-croquet.freesocks.work
+  type: ss
+  udp: true
+- alterId: 2
+  cipher: auto
+  name: US美国(mibei77.com 米贝节点分享) 6
+  network: ws
+  port: 30808
+  server: v8.heduian.link
+  skip-cert-verify: true
+  tls: false
+  type: vmess
+  udp: true
+  uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484
+  ws-headers:
+    Host: v8.heduian.link
+  ws-path: /oooo
 - alterId: 0
   cipher: auto
   name: FR法国(mibei77.com 米贝节点分享)
@@ -26,127 +144,32 @@ proxies:
   ws-headers:
     Host: 2001:bc8:32d7:302::10
   ws-path: /
-- name: US美国(mibei77.com 米贝节点分享) 2
-  password: 6448145a43e28cc4
-  port: 8443
-  server: uk-02.allhubb.info
+- alterId: 0
+  cipher: auto
+  name: FR法国(mibei77.com 米贝节点分享) 2
+  network: ws
+  port: 44579
+  server: 2001:bc8:32d7:302::10
   skip-cert-verify: true
-  sni: uk-02.allhubb.info
-  type: trojan
+  tls: false
+  type: vmess
   udp: true
+  uuid: 8e34e170-13ae-4892-9d20-05962acc9f84
+  ws-headers:
+    Host: 2001:bc8:32d7:302::10
+  ws-path: /
 - cipher: chacha20-ietf-poly1305
-  name: US美国(mibei77.com 米贝节点分享) 3
+  name: US美国(mibei77.com 米贝节点分享) 7
   password: p78naCf2EfOlRSLTX0wFVx
   port: 443
   server: pupas-shirting-unsung.freesocks.work
   type: ss
   udp: true
 - cipher: chacha20-ietf-poly1305
-  name: US美国(mibei77.com 米贝节点分享) 4
+  name: US美国(mibei77.com 米贝节点分享) 8
   password: 9tqhMdIrTkgQ46PvhyAtMH
   port: 443
   server: switcher-nick-croquet.freesocks.work
-  type: ss
-  udp: true
-- name: US美国(mibei77.com 米贝节点分享) 5
-  password: ad9c84af-e5aa-43e2-88df-7cfd99d4d0a0
-  port: 443
-  server: bestcdn1.682637.xyz
-  skip-cert-verify: true
-  sni: bestcdn1.682637.xyz
-  type: trojan
-  udp: true
-- name: US美国(mibei77.com 米贝节点分享) 6
-  password: ad9c84af-e5aa-43e2-88df-7cfd99d4d0a0
-  port: 443
-  server: bestcdn1.682637.xyz
-  skip-cert-verify: true
-  sni: bestcdn1.682637.xyz
-  type: trojan
-  udp: true
-- name: US美国(mibei77.com 米贝节点分享) 7
-  password: ad9c84af-e5aa-43e2-88df-7cfd99d4d0a0
-  port: 443
-  server: bestcdn1.682637.xyz
-  skip-cert-verify: true
-  sni: bestcdn1.682637.xyz
-  type: trojan
-  udp: true
-- name: US美国(mibei77.com 米贝节点分享) 8
-  password: ad9c84af-e5aa-43e2-88df-7cfd99d4d0a0
-  port: 443
-  server: bestcdn1.682637.xyz
-  skip-cert-verify: true
-  sni: bestcdn1.682637.xyz
-  type: trojan
-  udp: true
-- name: US美国(mibei77.com 米贝节点分享) 9
-  password: ad9c84af-e5aa-43e2-88df-7cfd99d4d0a0
-  port: 443
-  server: bestcdn1.682637.xyz
-  skip-cert-verify: true
-  sni: bestcdn1.682637.xyz
-  type: trojan
-  udp: true
-- cipher: chacha20-ietf-poly1305
-  name: US美国(mibei77.com 米贝节点分享) 10
-  password: RFK38Cg7APneSB5cWDcpbm
-  port: 443
-  server: switcher-nick-croquet.freesocks.work
-  type: ss
-  udp: true
-- name: US美国(mibei77.com 米贝节点分享) 11
-  password: ad9c84af-e5aa-43e2-88df-7cfd99d4d0a0
-  port: 443
-  server: bestcdn1.682637.xyz
-  skip-cert-verify: true
-  sni: bestcdn1.682637.xyz
-  type: trojan
-  udp: true
-- name: US美国(mibei77.com 米贝节点分享) 12
-  password: ad9c84af-e5aa-43e2-88df-7cfd99d4d0a0
-  port: 443
-  server: bestcdn1.682637.xyz
-  skip-cert-verify: true
-  sni: bestcdn1.682637.xyz
-  type: trojan
-  udp: true
-- cipher: chacha20-ietf-poly1305
-  name: RU俄罗斯(mibei77.com 米贝节点分享)
-  password: RP767jpZVarzQ0iI0vbTuA
-  port: 37538
-  server: 78.40.117.109
-  type: ss
-  udp: true
-- name: US美国(mibei77.com 米贝节点分享) 13
-  password: ad9c84af-e5aa-43e2-88df-7cfd99d4d0a0
-  port: 443
-  server: bestcdn1.682637.xyz
-  skip-cert-verify: true
-  sni: bestcdn1.682637.xyz
-  type: trojan
-  udp: true
-- name: US美国(mibei77.com 米贝节点分享) 14
-  password: ad9c84af-e5aa-43e2-88df-7cfd99d4d0a0
-  port: 443
-  server: bestcdn1.682637.xyz
-  skip-cert-verify: true
-  sni: bestcdn1.682637.xyz
-  type: trojan
-  udp: true
-- name: US美国(mibei77.com 米贝节点分享) 15
-  password: ad9c84af-e5aa-43e2-88df-7cfd99d4d0a0
-  port: 443
-  server: bestcdn1.682637.xyz
-  skip-cert-verify: true
-  sni: bestcdn1.682637.xyz
-  type: trojan
-  udp: true
-- cipher: chacha20-ietf-poly1305
-  name: JP日本(mibei77.com 米贝节点分享)
-  password: Nk9asglDzHzjktVzTkvhaA
-  port: 443
-  server: arxfw2b78fi2q9hzylhn.freesocks.work
   type: ss
   udp: true
 proxy-groups:
@@ -155,45 +178,47 @@ proxy-groups:
   - ♻️ 自动选择
   - 🎯 全球直连
   - US美国(mibei77.com 米贝节点分享)
-  - FR法国(mibei77.com 米贝节点分享)
+  - HK香港(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 4
   - US美国(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 5
+  - HK香港(mibei77.com 米贝节点分享) 6
+  - HK香港(mibei77.com 米贝节点分享) 7
+  - HK香港(mibei77.com 米贝节点分享) 8
   - US美国(mibei77.com 米贝节点分享) 4
+  - JP日本(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 5
   - US美国(mibei77.com 米贝节点分享) 6
+  - FR法国(mibei77.com 米贝节点分享)
+  - FR法国(mibei77.com 米贝节点分享) 2
   - US美国(mibei77.com 米贝节点分享) 7
   - US美国(mibei77.com 米贝节点分享) 8
-  - US美国(mibei77.com 米贝节点分享) 9
-  - US美国(mibei77.com 米贝节点分享) 10
-  - US美国(mibei77.com 米贝节点分享) 11
-  - US美国(mibei77.com 米贝节点分享) 12
-  - RU俄罗斯(mibei77.com 米贝节点分享)
-  - US美国(mibei77.com 米贝节点分享) 13
-  - US美国(mibei77.com 米贝节点分享) 14
-  - US美国(mibei77.com 米贝节点分享) 15
-  - JP日本(mibei77.com 米贝节点分享)
   type: select
 - interval: 300
   name: ♻️ 自动选择
   proxies:
   - US美国(mibei77.com 米贝节点分享)
-  - FR法国(mibei77.com 米贝节点分享)
+  - HK香港(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 4
   - US美国(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 5
+  - HK香港(mibei77.com 米贝节点分享) 6
+  - HK香港(mibei77.com 米贝节点分享) 7
+  - HK香港(mibei77.com 米贝节点分享) 8
   - US美国(mibei77.com 米贝节点分享) 4
+  - JP日本(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 5
   - US美国(mibei77.com 米贝节点分享) 6
+  - FR法国(mibei77.com 米贝节点分享)
+  - FR法国(mibei77.com 米贝节点分享) 2
   - US美国(mibei77.com 米贝节点分享) 7
   - US美国(mibei77.com 米贝节点分享) 8
-  - US美国(mibei77.com 米贝节点分享) 9
-  - US美国(mibei77.com 米贝节点分享) 10
-  - US美国(mibei77.com 米贝节点分享) 11
-  - US美国(mibei77.com 米贝节点分享) 12
-  - RU俄罗斯(mibei77.com 米贝节点分享)
-  - US美国(mibei77.com 米贝节点分享) 13
-  - US美国(mibei77.com 米贝节点分享) 14
-  - US美国(mibei77.com 米贝节点分享) 15
-  - JP日本(mibei77.com 米贝节点分享)
   type: url-test
   url: http://www.gstatic.com/generate_204
 - name: 🎥 NETFLIX
@@ -202,23 +227,24 @@ proxy-groups:
   - ♻️ 自动选择
   - 🎯 全球直连
   - US美国(mibei77.com 米贝节点分享)
-  - FR法国(mibei77.com 米贝节点分享)
+  - HK香港(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 4
   - US美国(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 5
+  - HK香港(mibei77.com 米贝节点分享) 6
+  - HK香港(mibei77.com 米贝节点分享) 7
+  - HK香港(mibei77.com 米贝节点分享) 8
   - US美国(mibei77.com 米贝节点分享) 4
+  - JP日本(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 5
   - US美国(mibei77.com 米贝节点分享) 6
+  - FR法国(mibei77.com 米贝节点分享)
+  - FR法国(mibei77.com 米贝节点分享) 2
   - US美国(mibei77.com 米贝节点分享) 7
   - US美国(mibei77.com 米贝节点分享) 8
-  - US美国(mibei77.com 米贝节点分享) 9
-  - US美国(mibei77.com 米贝节点分享) 10
-  - US美国(mibei77.com 米贝节点分享) 11
-  - US美国(mibei77.com 米贝节点分享) 12
-  - RU俄罗斯(mibei77.com 米贝节点分享)
-  - US美国(mibei77.com 米贝节点分享) 13
-  - US美国(mibei77.com 米贝节点分享) 14
-  - US美国(mibei77.com 米贝节点分享) 15
-  - JP日本(mibei77.com 米贝节点分享)
   type: select
 - name: ⛔️ 广告拦截
   proxies:
@@ -238,27 +264,36 @@ proxy-groups:
   - ♻️ 自动选择
   - 🎯 全球直连
   - US美国(mibei77.com 米贝节点分享)
-  - FR法国(mibei77.com 米贝节点分享)
+  - HK香港(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 4
   - US美国(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 5
+  - HK香港(mibei77.com 米贝节点分享) 6
+  - HK香港(mibei77.com 米贝节点分享) 7
+  - HK香港(mibei77.com 米贝节点分享) 8
   - US美国(mibei77.com 米贝节点分享) 4
+  - JP日本(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 5
   - US美国(mibei77.com 米贝节点分享) 6
+  - FR法国(mibei77.com 米贝节点分享)
+  - FR法国(mibei77.com 米贝节点分享) 2
   - US美国(mibei77.com 米贝节点分享) 7
   - US美国(mibei77.com 米贝节点分享) 8
-  - US美国(mibei77.com 米贝节点分享) 9
-  - US美国(mibei77.com 米贝节点分享) 10
-  - US美国(mibei77.com 米贝节点分享) 11
-  - US美国(mibei77.com 米贝节点分享) 12
-  - RU俄罗斯(mibei77.com 米贝节点分享)
-  - US美国(mibei77.com 米贝节点分享) 13
-  - US美国(mibei77.com 米贝节点分享) 14
-  - US美国(mibei77.com 米贝节点分享) 15
-  - JP日本(mibei77.com 米贝节点分享)
   type: select
 - name: 🌏 国内媒体
   proxies:
   - 🎯 全球直连
+  - HK香港(mibei77.com 米贝节点分享)
+  - HK香港(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 4
+  - HK香港(mibei77.com 米贝节点分享) 5
+  - HK香港(mibei77.com 米贝节点分享) 6
+  - HK香港(mibei77.com 米贝节点分享) 7
+  - HK香港(mibei77.com 米贝节点分享) 8
   - 🔰 节点选择
   type: select
 - name: Ⓜ️ 微软服务
@@ -266,46 +301,48 @@ proxy-groups:
   - 🎯 全球直连
   - 🔰 节点选择
   - US美国(mibei77.com 米贝节点分享)
-  - FR法国(mibei77.com 米贝节点分享)
+  - HK香港(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 4
   - US美国(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 5
+  - HK香港(mibei77.com 米贝节点分享) 6
+  - HK香港(mibei77.com 米贝节点分享) 7
+  - HK香港(mibei77.com 米贝节点分享) 8
   - US美国(mibei77.com 米贝节点分享) 4
+  - JP日本(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 5
   - US美国(mibei77.com 米贝节点分享) 6
+  - FR法国(mibei77.com 米贝节点分享)
+  - FR法国(mibei77.com 米贝节点分享) 2
   - US美国(mibei77.com 米贝节点分享) 7
   - US美国(mibei77.com 米贝节点分享) 8
-  - US美国(mibei77.com 米贝节点分享) 9
-  - US美国(mibei77.com 米贝节点分享) 10
-  - US美国(mibei77.com 米贝节点分享) 11
-  - US美国(mibei77.com 米贝节点分享) 12
-  - RU俄罗斯(mibei77.com 米贝节点分享)
-  - US美国(mibei77.com 米贝节点分享) 13
-  - US美国(mibei77.com 米贝节点分享) 14
-  - US美国(mibei77.com 米贝节点分享) 15
-  - JP日本(mibei77.com 米贝节点分享)
   type: select
 - name: 📲 电报信息
   proxies:
   - 🔰 节点选择
   - 🎯 全球直连
   - US美国(mibei77.com 米贝节点分享)
-  - FR法国(mibei77.com 米贝节点分享)
+  - HK香港(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 4
   - US美国(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 5
+  - HK香港(mibei77.com 米贝节点分享) 6
+  - HK香港(mibei77.com 米贝节点分享) 7
+  - HK香港(mibei77.com 米贝节点分享) 8
   - US美国(mibei77.com 米贝节点分享) 4
+  - JP日本(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 5
   - US美国(mibei77.com 米贝节点分享) 6
+  - FR法国(mibei77.com 米贝节点分享)
+  - FR法国(mibei77.com 米贝节点分享) 2
   - US美国(mibei77.com 米贝节点分享) 7
   - US美国(mibei77.com 米贝节点分享) 8
-  - US美国(mibei77.com 米贝节点分享) 9
-  - US美国(mibei77.com 米贝节点分享) 10
-  - US美国(mibei77.com 米贝节点分享) 11
-  - US美国(mibei77.com 米贝节点分享) 12
-  - RU俄罗斯(mibei77.com 米贝节点分享)
-  - US美国(mibei77.com 米贝节点分享) 13
-  - US美国(mibei77.com 米贝节点分享) 14
-  - US美国(mibei77.com 米贝节点分享) 15
-  - JP日本(mibei77.com 米贝节点分享)
   type: select
 - name: 🍎 苹果服务
   proxies:
@@ -313,23 +350,24 @@ proxy-groups:
   - 🎯 全球直连
   - ♻️ 自动选择
   - US美国(mibei77.com 米贝节点分享)
-  - FR法国(mibei77.com 米贝节点分享)
+  - HK香港(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 4
   - US美国(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 5
+  - HK香港(mibei77.com 米贝节点分享) 6
+  - HK香港(mibei77.com 米贝节点分享) 7
+  - HK香港(mibei77.com 米贝节点分享) 8
   - US美国(mibei77.com 米贝节点分享) 4
+  - JP日本(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 5
   - US美国(mibei77.com 米贝节点分享) 6
+  - FR法国(mibei77.com 米贝节点分享)
+  - FR法国(mibei77.com 米贝节点分享) 2
   - US美国(mibei77.com 米贝节点分享) 7
   - US美国(mibei77.com 米贝节点分享) 8
-  - US美国(mibei77.com 米贝节点分享) 9
-  - US美国(mibei77.com 米贝节点分享) 10
-  - US美国(mibei77.com 米贝节点分享) 11
-  - US美国(mibei77.com 米贝节点分享) 12
-  - RU俄罗斯(mibei77.com 米贝节点分享)
-  - US美国(mibei77.com 米贝节点分享) 13
-  - US美国(mibei77.com 米贝节点分享) 14
-  - US美国(mibei77.com 米贝节点分享) 15
-  - JP日本(mibei77.com 米贝节点分享)
   type: select
 - name: 🎯 全球直连
   proxies:
@@ -346,23 +384,24 @@ proxy-groups:
   - 🎯 全球直连
   - ♻️ 自动选择
   - US美国(mibei77.com 米贝节点分享)
-  - FR法国(mibei77.com 米贝节点分享)
+  - HK香港(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 2
+  - HK香港(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 4
   - US美国(mibei77.com 米贝节点分享) 3
+  - HK香港(mibei77.com 米贝节点分享) 5
+  - HK香港(mibei77.com 米贝节点分享) 6
+  - HK香港(mibei77.com 米贝节点分享) 7
+  - HK香港(mibei77.com 米贝节点分享) 8
   - US美国(mibei77.com 米贝节点分享) 4
+  - JP日本(mibei77.com 米贝节点分享)
   - US美国(mibei77.com 米贝节点分享) 5
   - US美国(mibei77.com 米贝节点分享) 6
+  - FR法国(mibei77.com 米贝节点分享)
+  - FR法国(mibei77.com 米贝节点分享) 2
   - US美国(mibei77.com 米贝节点分享) 7
   - US美国(mibei77.com 米贝节点分享) 8
-  - US美国(mibei77.com 米贝节点分享) 9
-  - US美国(mibei77.com 米贝节点分享) 10
-  - US美国(mibei77.com 米贝节点分享) 11
-  - US美国(mibei77.com 米贝节点分享) 12
-  - RU俄罗斯(mibei77.com 米贝节点分享)
-  - US美国(mibei77.com 米贝节点分享) 13
-  - US美国(mibei77.com 米贝节点分享) 14
-  - US美国(mibei77.com 米贝节点分享) 15
-  - JP日本(mibei77.com 米贝节点分享)
   type: select
 rules:
 - DOMAIN-SUFFIX,local,🎯 全球直连
