--- a/nodes/ndnode.yaml
+++ b/nodes/ndnode.yaml
@@ -58,56 +58,37 @@ proxies:
   cipher: auto
   client-fingerprint: chrome
   name: 🇭🇰 香港3|@stairnode
-  port: 34310
-  server: 149.104.15.178
+  port: 41522
+  server: 43.247.135.17
   skip-cert-verify: false
   tfo: false
   tls: false
   type: vmess
-  uuid: 114b2416-9c29-4a7c-81ea-2b14e7a5588c
+  uuid: ea897b9a-0894-4f17-ab5b-7e059678734d
 - client-fingerprint: chrome
   name: 🇭🇰 香港4|@stairnode
   password: 253bc477d4e43c209f2d427272968280
   port: 443
-  server: 58.152.53.94
+  server: 126.66.52.118
   skip-cert-verify: false
   sni: www.nintendogames.net
   type: trojan
 - client-fingerprint: chrome
   name: 🇭🇰 香港6|@stairnode
   password: 253bc477d4e43c209f2d427272968280
-  port: 4431
-  server: 221.128.195.219
+  port: 443
+  server: 58.152.53.162
+  skip-cert-verify: true
+  sni: fe2.update.microsoft.com
+  type: trojan
+- client-fingerprint: chrome
+  name: 🇯🇵 日本2|@stairnode
+  password: 253bc477d4e43c209f2d427272968280
+  port: 1920
+  server: 36.156.102.84
   skip-cert-verify: false
   sni: www.nintendogames.net
   type: trojan
-- alterId: 0
-  cipher: auto
-  client-fingerprint: chrome
-  name: 🇭🇰 香港5|@stairnode
-  network: ws
-  port: 21791
-  server: kf5uhgscrdl73kmihv8c.appsworld.shop
-  skip-cert-verify: false
-  tfo: false
-  tls: false
-  type: vmess
-  uuid: 3b14ba6e-786f-3b86-8bce-2803ea19b8cc
-  ws-opts:
-    headers:
-      Host: www.baidu.com
-    path: /cbf7f6acabd0dde4bef067580c126fed77a00de7
-- alterId: 0
-  cipher: auto
-  client-fingerprint: chrome
-  name: 🇭🇰 香港7|@stairnode
-  port: 35436
-  server: 103.30.78.138
-  skip-cert-verify: false
-  tfo: false
-  tls: false
-  type: vmess
-  uuid: 084928cf-ed55-42e8-b686-b8e271dfb0ce
 - alterId: 2
   cipher: auto
   client-fingerprint: chrome
@@ -125,59 +106,71 @@ proxies:
       Host: ocbc.com
     path: /oooo
 - client-fingerprint: chrome
-  name: 🇯🇵 日本2|@stairnode
-  password: 253bc477d4e43c209f2d427272968280
-  port: 3271
-  server: 36.156.102.84
-  skip-cert-verify: false
-  sni: www.nintendogames.net
-  type: trojan
-- client-fingerprint: chrome
   name: 🇯🇵 日本3|@stairnode
   password: 253bc477d4e43c209f2d427272968280
-  port: 4451
-  server: 153.121.70.134
-  skip-cert-verify: false
-  sni: www.nintendogames.net
-  type: trojan
-- client-fingerprint: chrome
-  name: 🇸🇬 新加坡|@stairnode
-  password: 253bc477d4e43c209f2d427272968280
-  port: 5041
-  server: 153.121.70.134
-  skip-cert-verify: false
-  sni: www.nintendogames.net
-  type: trojan
-- client-fingerprint: chrome
-  name: 🇸🇬 新加坡2|@stairnode
-  password: 253bc477d4e43c209f2d427272968280
-  port: 1536
-  server: 160.16.81.84
-  skip-cert-verify: false
-  sni: www.nintendogames.net
-  type: trojan
-- client-fingerprint: chrome
-  name: 🇺🇸 美国|@stairnode
-  password: 253bc477d4e43c209f2d427272968280
-  port: 443
-  server: 23.227.194.234
-  skip-cert-verify: false
-  sni: www.nintendogames.net
-  type: trojan
-- client-fingerprint: chrome
-  name: 🇺🇸 美国2|@stairnode
-  password: 253bc477d4e43c209f2d427272968280
-  port: 1572
+  port: 3160
   server: 36.156.102.84
   skip-cert-verify: false
   sni: www.nintendogames.net
   type: trojan
 - cipher: aes-256-cfb
   client-fingerprint: chrome
+  name: 🇰🇷 韩国|@stairnode
+  password: f8f7aCzcPKbsF8p3
+  port: 989
+  server: 154.90.63.177
+  tfo: false
+  type: ss
+- client-fingerprint: chrome
+  name: 🇸🇬 新加坡|@stairnode
+  password: 253bc477d4e43c209f2d427272968280
+  port: 2173
+  server: 36.156.102.84
+  skip-cert-verify: false
+  sni: www.nintendogames.net
+  type: trojan
+- client-fingerprint: chrome
+  name: 🇸🇬 新加坡2|@stairnode
+  password: 253bc477d4e43c209f2d427272968280
+  port: 5321
+  server: 36.156.102.84
+  skip-cert-verify: false
+  sni: www.nintendogames.net
+  type: trojan
+- cipher: chacha20-ietf-poly1305
+  client-fingerprint: chrome
+  name: 🇸🇬 新加坡3|@stairnode
+  password: t0srmdxrm3xyjnvqz9ewlxb2myq7rjuv
+  plugin: obfs
+  plugin-opts:
+    host: (TG @stairnode)32cf132:178330
+    mode: tls
+  port: 2377
+  server: 5.44.249.43
+  tfo: false
+  type: ss
+- client-fingerprint: chrome
+  name: 🇺🇸 美国|@stairnode
+  password: 253bc477d4e43c209f2d427272968280
+  port: 24673
+  server: 36.156.102.84
+  skip-cert-verify: true
+  sni: fe2.update.microsoft.com
+  type: trojan
+- client-fingerprint: chrome
+  name: 🇺🇸 美国2|@stairnode
+  password: 253bc477d4e43c209f2d427272968280
+  port: 2381
+  server: 36.156.102.84
+  skip-cert-verify: true
+  sni: fe2.update.microsoft.com
+  type: trojan
+- cipher: aes-256-cfb
+  client-fingerprint: chrome
   name: 🇻🇳 越南|@stairnode
   password: Xn8jKdmDM00IeO%#$#fJAMtsEAEUOpH/YWYtYqDFnT0SV
   port: 38388
-  server: 103.186.154.184
+  server: 103.186.154.27
   tfo: false
   type: ss
 proxy-groups:
@@ -191,13 +184,13 @@ proxy-groups:
   - 🇭🇰 香港3|@stairnode
   - 🇭🇰 香港4|@stairnode
   - 🇭🇰 香港6|@stairnode
-  - 🇭🇰 香港5|@stairnode
-  - 🇭🇰 香港7|@stairnode
-  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇰🇷 韩国|@stairnode
   - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
+  - 🇸🇬 新加坡3|@stairnode
   - 🇺🇸 美国|@stairnode
   - 🇺🇸 美国2|@stairnode
   - 🇻🇳 越南|@stairnode
@@ -211,13 +204,13 @@ proxy-groups:
   - 🇭🇰 香港3|@stairnode
   - 🇭🇰 香港4|@stairnode
   - 🇭🇰 香港6|@stairnode
-  - 🇭🇰 香港5|@stairnode
-  - 🇭🇰 香港7|@stairnode
-  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇰🇷 韩国|@stairnode
   - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
+  - 🇸🇬 新加坡3|@stairnode
   - 🇺🇸 美国|@stairnode
   - 🇺🇸 美国2|@stairnode
   - 🇻🇳 越南|@stairnode
@@ -235,13 +228,13 @@ proxy-groups:
   - 🇭🇰 香港3|@stairnode
   - 🇭🇰 香港4|@stairnode
   - 🇭🇰 香港6|@stairnode
-  - 🇭🇰 香港5|@stairnode
-  - 🇭🇰 香港7|@stairnode
-  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇰🇷 韩国|@stairnode
   - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
+  - 🇸🇬 新加坡3|@stairnode
   - 🇺🇸 美国|@stairnode
   - 🇺🇸 美国2|@stairnode
   - 🇻🇳 越南|@stairnode
@@ -256,13 +249,13 @@ proxy-groups:
   - 🇭🇰 香港3|@stairnode
   - 🇭🇰 香港4|@stairnode
   - 🇭🇰 香港6|@stairnode
-  - 🇭🇰 香港5|@stairnode
-  - 🇭🇰 香港7|@stairnode
-  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇰🇷 韩国|@stairnode
   - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
+  - 🇸🇬 新加坡3|@stairnode
   - 🇺🇸 美国|@stairnode
   - 🇺🇸 美国2|@stairnode
   - 🇻🇳 越南|@stairnode
@@ -277,13 +270,13 @@ proxy-groups:
   - 🇭🇰 香港3|@stairnode
   - 🇭🇰 香港4|@stairnode
   - 🇭🇰 香港6|@stairnode
-  - 🇭🇰 香港5|@stairnode
-  - 🇭🇰 香港7|@stairnode
-  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇰🇷 韩国|@stairnode
   - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
+  - 🇸🇬 新加坡3|@stairnode
   - 🇺🇸 美国|@stairnode
   - 🇺🇸 美国2|@stairnode
   - 🇻🇳 越南|@stairnode
@@ -298,13 +291,13 @@ proxy-groups:
   - 🇭🇰 香港3|@stairnode
   - 🇭🇰 香港4|@stairnode
   - 🇭🇰 香港6|@stairnode
-  - 🇭🇰 香港5|@stairnode
-  - 🇭🇰 香港7|@stairnode
-  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇰🇷 韩国|@stairnode
   - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
+  - 🇸🇬 新加坡3|@stairnode
   - 🇺🇸 美国|@stairnode
   - 🇺🇸 美国2|@stairnode
   - 🇻🇳 越南|@stairnode
@@ -320,13 +313,13 @@ proxy-groups:
   - 🇭🇰 香港3|@stairnode
   - 🇭🇰 香港4|@stairnode
   - 🇭🇰 香港6|@stairnode
-  - 🇭🇰 香港5|@stairnode
-  - 🇭🇰 香港7|@stairnode
-  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇰🇷 韩国|@stairnode
   - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
+  - 🇸🇬 新加坡3|@stairnode
   - 🇺🇸 美国|@stairnode
   - 🇺🇸 美国2|@stairnode
   - 🇻🇳 越南|@stairnode
@@ -358,13 +351,13 @@ proxy-groups:
   - 🇭🇰 香港3|@stairnode
   - 🇭🇰 香港4|@stairnode
   - 🇭🇰 香港6|@stairnode
-  - 🇭🇰 香港5|@stairnode
-  - 🇭🇰 香港7|@stairnode
-  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本2|@stairnode
+  - 🇯🇵 日本|@stairnode
   - 🇯🇵 日本3|@stairnode
+  - 🇰🇷 韩国|@stairnode
   - 🇸🇬 新加坡|@stairnode
   - 🇸🇬 新加坡2|@stairnode
+  - 🇸🇬 新加坡3|@stairnode
   - 🇺🇸 美国|@stairnode
   - 🇺🇸 美国2|@stairnode
   - 🇻🇳 越南|@stairnode
